--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,11 +7,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         {% block stylesheets %}
         <script src="https://js.stripe.com/v3/"></script>
-        <link rel ="stylesheet"  href="Candy.css">
-        <link rel ="stylesheet"  href="panier.css"> 
-        <link rel ="stylesheet"  href="login.css">
+        <link rel ="stylesheet"  href="css/Candy.css">
+        <link rel ="stylesheet"  href="css/panier.css"> 
+        <link rel ="stylesheet"  href="css/login.css">
+        <link rel ="stylesheet"  href="css/contact.css">
+        <link rel ="stylesheet"  href="css/registration.css">
         {# <link rel ="stylesheet"  href="produits.css"> #}
         {# <link rel ="stylesheet"  href="moncompte.css"> #}
+        <script src="https://www.canva.com/design/DAEVuXL5hcE/Flmk9d49oJJkP86zBeWyEA/watch?utm_content=DAEVuXL5hcE&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink"></script>
         <link href="{{ asset('produits.css') }}" rel="stylesheet">
         {# <link rel="preconnect" href="https://fonts.gstatic.com"> #}
         {# <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet"> #} 
@@ -32,7 +35,10 @@
 
     <div class = "contenu_header">
             <div class="Logo__container_bd-grid">
-                <img src="img/logo_Candy.png" alt="Logo" class="logo_Candy_img">
+            <figure class="logo_Candy_img">
+                <a class="image_logo"href="/"><img src="img/logo_Candy.png" alt="Logo" /></a>
+            </figure>
+                {# <img src="img/logo_Candy.png" alt="Logo" class="logo_Candy_img"> #}
             </div>
             <h1>Candy Shop</h1>
 
@@ -63,7 +69,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/payment">paiement</a>
+                    <a class="nav-link" href="/payment/index">paiement</a>
                 </li>
 
                <li class="nav-item">
@@ -86,7 +92,11 @@
      <section class="Accueil" id="Accueil">
         <div class="Accueil__container bd-grid">
                 {# <img src="img/marshmallows.jpg" alt="marshmallows" class="marshmallows_img"> #}
-                <img src="img/dragibus.png" alt="dragibus" class="dragibus_img">
+                
+                <figure class="candy">
+                    <a href="#"><img src="img/dragibus.png" alt="dragibus"/></a>
+                </figure>
+                <img src="img/dragibus.png" alt="dragibus" class="dragibus_img"> 
                 <article class="bonbons">
                     <span class="bonbons__nom">Dragibus</span>
                     <span class="bonbons__prix">5.00€</span>
