--- a/templates/site/moncompte.html.twig
+++ b/templates/site/moncompte.html.twig
@@ -2,8 +2,7 @@
 
 
 {% block body %}
-	<h2>J'ai déjà un compte
-	</h2>
+	<h1>J'ai déjà un compte</h1>
 
 	<div class="form-floating mb-3">
 		<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -15,8 +14,7 @@
 		<a href="#" class="btn btn-primary">M'IDENTIFIER</a>
 	</div>
 
-	<h2>Je créer un compte
-	</h2>
+	<h1>Je créer un compte</h1>
 
 	<div class="form-floating mb-3">
 		<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
