--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -20,31 +20,33 @@
 });
 }
 	</script>
-
-	<h3>Formulaire de Contact</h3>
-
-	<form id="contact-form">
+	<div id="container">
+	<h1>Formulaire de Contact</h1>
+	
+	<form method="POST">
 		<div class="form-row d-block">
 			<div class="form-group mx-sm-3 mb-2">
-				<inputclass="form-control" type="hidden" name="contact_number"></div>
+				<input type="hidden" class="form-control"  name="contact_number" required></div>
 				<div class="form-group mx-sm-3 mb-2">
 					<label>Name</label>
-					<input class="form-control" type="text" name="user_name">
+					<input type="text" class="form-control"  name="user_name" required>
 				</div>
 				<div class="form-group mx-sm-3 mb-2">
 					<label>Email</label>
-					<input class="form-control" type="email" name="user_email">
+					<input type="email" class="form-control" name="user_email" required>
 				</div>
 				<div class="form-group mx-sm-3 mb-2">
 					<label>Message</label>
-					<textarea class="form-control" name="message"></textarea>
+					<input type="textarea" class="form-control" name="message" required>
+					{# <textarea class="form-control" name="message"></textarea> #}
 				</div>
 				<div class="form-group mx-sm-3 mb-2 text-center mt-5">
-					<input class="btn btn-info" type="submit" value="envoyer">
+					<input class="btn btn-info" type="submit" value="envoyer" required>
 				</div>
 			</div>
 		</div>
 	</form>
+	</div>
 {% endblock %}
 
 	
