--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello OrderController!{% endblock %}
-
+{% block stylesheets %}<script src="https://js.stripe.com/v3/"></script>{% endblock %} 
 {% block body %}
 {% for order in orders %}
     <table class="w-full font-body lg:text-base mb-10">
@@ -36,18 +36,39 @@
         </tfoot>
     </table>
     {% endfor %}
-{# <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+   
+ <button id="checkout-button">Acheter</button>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+{% endblock %}
+{% block javascripts %}
+  <script type="text/javascript">
+      // Create an instance of the Stripe object with your publishable API key
+      var stripe = Stripe('pk_test_51IYyyULDcAnwvEyZG4Pt7SOuE5Hdkz1G0LGKpX0BRvjrT6CX8UwFbgSta42lS3z0rh7q9rDak5V4JtW0G44cKExM00zILEeWvb');
+      var checkoutButton = document.getElementById('checkout-button');
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/utilisateur/monsite/src/Controller/OrderController.php'|file_link(0) }}">src/Controller/OrderController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/utilisateur/monsite/templates/order/index.html.twig'|file_link(0) }}">templates/order/index.html.twig</a></code></li>
-    </ul>
-</div> #}
+      checkoutButton.addEventListener('click', function() {
+        // Create a new Checkout Session using the server-side endpoint you
+        // created in step 3.
+        fetch('/create-checkout-session', {
+          method: 'POST',
+        })
+        .then(function(response) {
+          return response.json();
+        })
+        .then(function(session) {
+          return stripe.redirectToCheckout({ sessionId: session.id });
+        })
+        .then(function(result) {
+          // If `redirectToCheckout` fails due to a browser or network
+          // error, you should display the localized error message to your
+          // customer using `error.message`.
+          if (result.error) {
+            alert(result.error.message);
+          }
+        })
+        .catch(function(error) {
+          console.error('Error:', error);
+        });
+      });
+    </script>
 {% endblock %}
