--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -1,9 +1,41 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello PaymentController!{% endblock %}
-
+{% block stylesheets %}<script src="https://js.stripe.com/v3/"></script>{% endblock %}
 {% block body %}
-<h1>Un BONBON</h1>
- <button id="checkout-button">Acheter</button>
+ <h1>Un BONBON</h1>
+ <button id="checkout-button">Acheter</button> 
  
+{% endblock %}
+{% block javascripts %}
+  <script type="text/javascript">
+      // Create an instance of the Stripe object with your publishable API key
+      var stripe = Stripe('pk_test_51IYyyULDcAnwvEyZG4Pt7SOuE5Hdkz1G0LGKpX0BRvjrT6CX8UwFbgSta42lS3z0rh7q9rDak5V4JtW0G44cKExM00zILEeWvb');
+      var checkoutButton = document.getElementById('checkout-button');
+
+      checkoutButton.addEventListener('click', function() {
+        // Create a new Checkout Session using the server-side endpoint you
+        // created in step 3.
+        fetch('/create-checkout-session', {
+          method: 'POST',
+        })
+        .then(function(response) {
+          return response.json();
+        })
+        .then(function(session) {
+          return stripe.redirectToCheckout({ sessionId: session.id });
+        })
+        .then(function(result) {
+          // If `redirectToCheckout` fails due to a browser or network
+          // error, you should display the localized error message to your
+          // customer using `error.message`.
+          if (result.error) {
+            alert(result.error.message);
+          }
+        })
+        .catch(function(error) {
+          console.error('Error:', error);
+        });
+      });
+    </script>
 {% endblock %}
