--- a/templates/site/mentionslegales.html.twig
+++ b/templates/site/mentionslegales.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+<h1>MENTIONS LEGALES</h1>
+
 Merci de lire avec attention les différentes modalités d’utilisation du présent site avant d’y parcourir ses pages. En vous connectant sur ce site, vous acceptez, sans réserves, les présentes modalités.
 
 Aussi, conformément à l’article n°6 de la Loi n°2004-575 du 21 Juin 2004 pour la confiance dans l’économie numérique, les responsables du présent site internet www.anthedesign.fr sont :
