--- a/templates/site/panier.html.twig
+++ b/templates/site/panier.html.twig
@@ -1,5 +1,88 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Votre panier !{% endblock %}
+{% block stylesheets %}<script src="https://js.stripe.com/v3/"></script>{% endblock %}
 {% block body %}
 
+
+{% if items | length > 0 %}
+    <table class="table">
+        <thead>
+            <tr>
+                <th>image</th>
+                <th>Produit</th>
+                <th>Prix</th>
+                <th>Quantité</th>
+                <th>Total</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in items %}
+                <tr>
+                    <td>{{ item.product.image}}</td>
+                    <td>{{ item.product.nom}}</td>
+                    <td>{{ item.product.prix}}</td>
+                    <td>{{ item.quantity}}</td>
+                    <td>{{ item.product.prix * item.quantity }}</td>
+                    <td>
+                        <a href="{{ path('cart_remove', {'id' : item.product.id}) }}" class="btn btn-danger btn-sm">
+                            <i class="fas fa-trash"></a>
+                        </a>
+                        
+                    </td>
+                </tr>
+                
+            {% endfor %}
+        </body>
+        <tfoot>
+            <tr>
+                <td colspan="3" class="text-right">Total : </td>
+                <td>{{ total }}</td>
+                
+                <td></td>
+
+            </tr>
+            
+        </tfoot>
+    </table>
+    
+     <a href="{{ path('order_create') }}">valider votre commande</a>
+    {# <a href="#" class="button-light">Acheter</a> #}
+{% else %}
+    <h1>Votre panier est vide!</h1>
+{% endif %}
+{% block javascripts %}
+  <script type="text/javascript">
+      // Create an instance of the Stripe object with your publishable API key
+      var stripe = Stripe('pk_test_51IYyyULDcAnwvEyZG4Pt7SOuE5Hdkz1G0LGKpX0BRvjrT6CX8UwFbgSta42lS3z0rh7q9rDak5V4JtW0G44cKExM00zILEeWvb');
+      var checkoutButton = document.getElementById('checkout-button');
+
+      checkoutButton.addEventListener('click', function() {
+        // Create a new Checkout Session using the server-side endpoint you
+        // created in step 3.
+        fetch('/create-checkout-session', {
+          method: 'POST',
+        })
+        .then(function(response) {
+          return response.json();
+        })
+        .then(function(session) {
+          return stripe.redirectToCheckout({ sessionId: session.id });
+        })
+        .then(function(result) {
+          // If `redirectToCheckout` fails due to a browser or network
+          // error, you should display the localized error message to your
+          // customer using `error.message`.
+          if (result.error) {
+            alert(result.error.message);
+          }
+        })
+        .catch(function(error) {
+          console.error('Error:', error);
+        });
+      });
+    </script>
+{% endblock %}
+   
 {% endblock %}
