--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -47,7 +47,7 @@
         </tfoot>
     </table>
     
-     <a href="{{ path('order_create') }}">valider votre commande</a>
+     <a href="{{ path('payment') }}">valider votre commande</a>
     {# <a href="#" class="button-light">Acheter</a> #}
 {% else %}
     <h1>Votre panier est vide!</h1>
