--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -7,7 +7,7 @@
 	<div class="flex items-center justify-center font-body m-8">
 		<div class="w-full max-w-md bg-white shadow-lg rounded px-6 lg:px-12 pt-6 pb-8 mb-4">
 			<div class="text-dark-orange text-xl font-bold flex justify-center border-b-2 py-2 mb-4">
-				<h3>Créer un compte</h3>
+				<h3>CREER UN COMPTE</h3>
 				{# <h1 class="h3 mb-3 font-weight-normal">Créer un compte</h1> #}
 			</div>
 			<div class="mb-4">
