--- a/templates/site/panier.html.twig
+++ b/templates/site/panier.html.twig
@@ -1,7 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Votre panier !{% endblock %}
-{% block stylesheets %}<script src="https://js.stripe.com/v3/"></script>{% endblock %}
+{# {% block title %}Votre panier !{% endblock %} #}
+<script src="https://js.stripe.com/v3/"></script>
+<link rel ="stylesheet"  href="public\css\Candy.css ">
+{% block stylesheets %}
+{% stylesheets %}
+     {# <link rel ="stylesheet"  href="{{ asset('css/Candy.css') }}"> #}
+    {% endstylesheets %}
+
+{% endblock %}
+
 {% block body %}
 
 
