--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -1,7 +1,7 @@
-/* *{
-  margin:0;
-  padding:0;
-}  */
+*{
+    margin:0;
+    padding:0;
+} 
 
 .header__box{
     display: flex;
@@ -85,9 +85,7 @@ h1{
   
 img{
     border-radius: 5%;
-    /* height: 100px;
-    width: 150px;
-     */
+    
 }
 .button-light{
     font-family: "Rye";
@@ -155,48 +153,17 @@ img{
     -webkit-transform: scale(1.4);
     transform: scale(1.4);
   }
-  
+  .logo_Candy_img:hover img,
   .logo_Candy_img.hover img {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
-  /* .candy {
-    position: relative;
-    overflow: hidden;
-    margin: 10px;
-    min-width: 255px;
-    max-width: 315px;
-    height: 220px;
-    width: 100%;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  }
-  .candy img {
-    height: 100%;
-    position: absolute;
-    right: 0;
-    -webkit-transition: all 2s ease-out;
-    transition: all 2s ease-out;
-  }
-  .candy:hover img,
-  .candy.hover img {
-    -webkit-transform: translateX(130px);
-    transform: translateX(130px);
-  } */
-  /* Demo purposes only
-  body {
-    background-color: #212121;
-  } */
+
   .card-body{
     margin-top:15px;
   }
 @media screen and (max-width: 780px) {}
-
-/* @media screen and (min-width: 980px){
-
-        flex-flow: row wrap;
-}  */
-
-  
+ 
 
  @media only screen and (max-width: 1190px) {
    
