--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -19,13 +19,14 @@ form {
     width: 12%;
     margin: 0 auto;
     padding-bottom: 150px;
+    
 }
 h3{
     text-align: center;
     font-family: rye;
     color:#E97575;
-    font-size: 200%;
-    margin-bottom: 30px;
+    font-size: 36px;
+    margin-bottom: 5px;
 }
 #container{
     height: auto;
