--- a/templates/site/accueil.html.twig
+++ b/templates/site/accueil.html.twig
@@ -2,14 +2,14 @@
 
 {% block title %}Accueil Candy Shop!{% endblock %}
 
-
 {% block body %}
 
 	<div class="cartes">
+		
 		{% for produit in produits %}
-			<div class="card">
+		<div class="card">	
 			<figure class="candy">
-                    <a href="/"><img src="{{produit.image}}" alt="dragibus"/></a>
+                    <a href="/"><img src="{{produit.image}}" alt="img"/></a>
                 </figure>
 				{# <img src="{{produit.image}}" alt="dragibus" class="dragibus_img"> #}
 				<div class="card-body">
@@ -17,9 +17,9 @@
 					{# <p class="card-text">{{produit.prix}}</p> #}
 					<a href="/produit/{{produit.id}}" class="btn-primary">VOIR LE DETAIL</a>
 				</div>
-			</div>
+		</div>	
 		{% endfor %}
-
+		
 	</div>
 
 
