--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -14,23 +14,23 @@
                 <th>Prix</th>
                 <th>Quantité</th>
                 <th>Total</th>
-                <th></th>
+                
             </tr>
         </thead>
         <tbody>
             {% for item in items %}
                 <tr>
-                    <td>{{ item.product.image}}</td>
+                     <td><img src="{{ asset('')}}{{item.product.image}}"/></td>
                     <td>{{ item.product.nom}}</td>
                     <td>{{ item.product.prix}}</td>
                     <td>{{ item.quantity}}</td>
                     <td>{{ item.product.prix * item.quantity }}</td>
-                    <td>
+                    
                         <a href="{{ path('cart_remove', {'id' : item.product.id}) }}" class="btn btn-danger btn-sm">
                             <i class="fas fa-trash"></a>
                         </a>
                         
-                    </td>
+                    
                 </tr>
                 
             {% endfor %}
@@ -47,7 +47,7 @@
         </tfoot>
     </table>
     
-     <a href="{{ path('payment') }}">valider votre commande</a>
+     <a class="btn-primary" href="{{ path('payment') }}">valider votre commande</a>
     {# <a href="#" class="button-light">Acheter</a> #}
 {% else %}
     <h1>Votre panier est vide!</h1>
