--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 
-        <div class="card" style="width: 18rem;">
+        <div class="card only">
             <img src="{{ asset('')}}{{produit.image}}" alt="retest" class="boulesdegomme_img">
             <div class="card-body">
                 <h5 class="card-title"> {{produit.nom}} </h5>
