--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,7 @@
             <div class="Logo__container_bd-grid">
             <figure class="logo_Candy_img">
             
-                <a class="image_logo"href="/"><img src="/img/logo_Candy.png" alt="Logo" /></a>
+                <a class="image_logo"href="/"><img src="/img/logoCandy.png" alt="Logo" /></a>
             </figure>
                 
             </div>
